creating the actual project structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <body>
         <script src="lib/pixi.min.js"></script>
         <script src="lib/pixi-filters.js"></script>
+
+        <script src="src/gameplay.js"></script>
+        <script src="src/player.js"></script>
+        <script src="src/map.js"></script>
         <script src="src/game.js"></script>
     </body>
 </html>
