--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="lib/pixi.min.js"></script>
         <script src="lib/pixi-filters.js"></script>
 
+        <script src="src/data.js"></script>
         <script src="src/gameplay.js"></script>
         <script src="src/player.js"></script>
         <script src="src/map.js"></script>
