--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="lib/pixi-filters.js"></script>
 
         <script src="src/data.js"></script>
+        <script src="src/input.js"></script>
         <script src="src/gameplay.js"></script>
         <script src="src/player.js"></script>
         <script src="src/map.js"></script>
