--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>Canvas Test</title></head>
+    <head><title>Game Test</title></head>
     <body>
         <script src="lib/pixi.min.js"></script>
         <script src="lib/pixi-filters.js"></script>
